.metadata/.plugins/org.eclipse.cdt.ui/03-STM32F4xx_PID_galvo_2105_0706_ARMPLUG.build.log
14:58:47 **** Incremental Build of configuration Debug for project 03-STM32F4xx_PID_galvo_2105_0706_ARMPLUG ****
make all 
Building file: /media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c
Invoking: Cross ARM C Compiler
arm-none-eabi-gcc -mcpu=cortex-m4 -mthumb -mfloat-abi=soft -Og -fmessage-length=0 -fsigned-char -ffunction-sections -fdata-sections -ffreestanding -fno-move-loop-invariants -Wall -Wextra  -g3 -DDEBUG -DUSE_FULL_ASSERT -DTRACE -DOS_USE_TRACE_SEMIHOSTING_DEBUG -DSTM32F429xx -DUSE_HAL_DRIVER -DHSE_VALUE=8000000 -I"../include" -I"../system/include" -I"../system/include/cmsis" -I"../system/include/stm32f4-hal" -std=gnu11 -MMD -MP -MF"src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.d" -MT"src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.o" -c -o "src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.o" "/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c"
In file included from /media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c:1:0:
/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.h:34:1: error: unknown type name 'DAC_InitTypeDef'
 DAC_InitTypeDef     DAC_InitStructure;
 ^
/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.h:39:29: error: unknown type name 'DAC_Channel_'
 void DAC_DMA_SineWaveConfig(DAC_Channel_  l_t DACx, FunctionalState NewStateDAC, FunctionalState NewStateDMA);
                             ^
/media/data/CODES/sw4stm32_workbench/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.c:3:56: fatal error: stm32f4xx_dac.h: No such file or directory
 #include "stm32f4xx_dac.h"             // Device header
                                                        ^
compilation terminated.
make: *** [src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.o] Error 1
src/00-STM32F4_LIBRARY_MDB/subdir.mk:30: recipe for target 'src/00-STM32F4_LIBRARY_MDB/md_stm32f4_dac.o' failed

14:58:47 Build Finished (took 225ms)

